Solving moveTrains()Methods logic for Interlockingimpl.java  autograder tests